docs/book/v6/introduction/packages.md
# Packages

* `dotkernel/dot-cache`:`^4.3` - Provides caching based on symfony/cache
* `dotkernel/dot-cli`:`^3.9` - Build console applications based on laminas-cli
* `dotkernel/dot-data-fixtures`:`^1.4` - Provides a CLI interface for listing & executing doctrine data fixtures
* `dotkernel/dot-dependency-injection`:`^1.2` - Dependency injection component using class attributes
* `dotkernel/dot-errorhandler`:`^4.0` - Logging Error Handler for Middleware Applications
* `dotkernel/dot-flashmessenger`:`^3.6` - Provides session messages between redirects
* `dotkernel/dot-geoip`:`^3.9` - Retrieve information about an IP address based on maxmind/GeoIP2-php
* `dotkernel/dot-helpers`:`^3.8` - Helper/Utility classes based on mezzio/mezzio-helpers
* `dotkernel/dot-mail`:`^5.1` - Mail component based on laminas-mail
* `dotkernel/dot-navigation`:`^3.5` - Allows you to easily define and parse menus inside templates, configuration based approach
* `dotkernel/dot-rbac-guard`:`^3.6` - Defines authorization guards that authorize users for accessing certain parts of an application based on various criteria
* `dotkernel/dot-router`:`^1.0` - Dotkernel component to build complex routes, based on mezzio/mezzio-fastroute
* `dotkernel/dot-session`:`^5.7` - Dotkernel session component extending and customizing laminas-session
* `dotkernel/dot-twigrenderer`:`^3.6` - Dotkernel component providing twig extensions and customizations
* `friendsofphp/proxy-manager-lts`:`^1.0` - Fork of ocramius/proxy-manager
* `laminas/laminas-component-installer`:`^3.5` - Composer plugin for injecting modules and configuration providers into application configuration
* `laminas/laminas-config-aggregator`:`^1.18` - Lightweight library for collecting and merging configuration from different sources
* `mezzio/mezzio`:`^3.21` - PSR-15 Middleware Microframework
* `mezzio-authentication-oauth2`:`^2.11` - Middleware for Mezzio and PSR-7 applications providing an OAuth2 server for authentication.
* `mezzio/mezzio-authorization-rbac`:`^1.9` - Mezzio authorization rbac adapter for laminas/laminas-permissions-rbac
* `mezzio/mezzio-cors`:`^1.14` - CORS component for Mezzio and other PSR-15 middleware runners
* `mezzio/mezzio-fastroute`:`^3.13` - FastRoute integration for Mezzio
* `ramsey/uuid`:`^4.5` - Library for generating and working with universally unique identifiers (UUIDs).
* `ramsey/uuid-doctrine`:`^2.1` - Use ramsey/uuid as a Doctrine field type
* `roave/psr-container-doctrine`:`^5.2` - Doctrine Factories for PSR-11 Containers
